[package]
name = "lhash"
version = "0.1.0"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
repository = "https://github.com/DoumanAsh/lhash"
license = "BSL-1.0"
description = "Minimal hashing library"
keywords = ["crypto", "cryptography", "md5", "sha1", "const"]
categories = ["cryptography", "no-std"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

[features]
md5 = []
sha1 = []
sha256 = []

[package.metadata.docs.rs]
features = ["sha1", "md5"]
